--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,15 @@
     <string name="login">Login</string>
     <string name="abc_gmail_com">abc@gmail.com</string>
     <string name="user_id">User ID</string>
+    <string name="category_headlines">Headlines</string>
+    <string name="category_technology">Technology</string>
+    <string name="category_sports">Sports</string>
+    <string name="category_business">Business</string>
+    <string name="category_world">World</string>
+    <string name="category_entertainment">Entertainment</string>
+    <string name="category_science">Science</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
+    <string name="admob_app_id">ca-app-pub-5798395965775186~8938142200</string>
+    <string name="admob_ad_unit_id">ca-app-pub-5798395965775186~8938142200</string>
 </resources>
